# crate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  releasing.md
examples/: sample.analysis.json  sample.report.md
src/crate/: audio.py  bands.py  beats.py  cli.py  features.py  keys.py  mixpoints.py  output.py  pipeline.py  report.py  schema.py  sections.py
src/groove_analyser/: audio.py  bands.py  beats.py  cli.py  config.py  features.py  keys.py  mixpoints.py  output.py  pipeline.py  report.py  schema.py  sections.py  utils.py
tests/: test_bands.py  test_config.py  test_keys.py  test_output.py  test_report.py  test_schema.py
