[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groove-analyser"
version = "0.1.0"
description = "LLM-friendly music analysis CLI for DJ-oriented tracks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Groove Analyser" }
]
dependencies = [
  "librosa>=0.10.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "soundfile>=0.12.0",
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
groove-analyser = "groove_analyser.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
