[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crate"
version = "0.1.0"
description = "DJ-ready structure and mix-point analysis for electronic tracks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "crate" }
]
dependencies = [
  "librosa>=0.10.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "soundfile>=0.12.0",
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.34.0",
  "pytest>=8.0.0"
]

[project.scripts]
crate = "crate.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportAny = "none"
reportExplicitAny = "none"
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
